# LD51

./: CMakeLists.txt  README.md  settings.cfg
res/level/: main_level.txt
src/Engine/: Game.cpp  Game.h  Settings.cpp
src/Engine/Audio/: AudioSound.h
src/Entity/Components/Generic/: HealthComponent.h  ScriptComponent.h  StateComponent.h
src/Entity/Components/Physics/: EdgeCheckComponent.h
src/Entity/Components/Render/: RenderComponent.h
src/Entity/Components/Specialized/: BootsComponent.h  CheckpointComponent.h  EnemyComponent.h  GoalComponent.h  PickupComponent.h  ProjectileComponent.h  WalljumpComponent.h  WeaponComponent.h
src/Entity/Prefabs/: Checkpoint.cpp  Checkpoint.h  Engine.cpp  Engine.h  Goal.cpp  Goal.h  Pickup.cpp  Pickup.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h
src/Entity/Systems/: CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DeathSystem.cpp  DeathSystem.h  InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  RenderSystem.cpp  RenderSystem.h  RespawnSystem.cpp  RespawnSystem.h
src/Input/: InputEvent.h
src/Level/: Level.cpp  Level.h  LevelParser.cpp  LevelParser.h
src/Localization/: StringID.h
src/Render/: DialogueBox.cpp  DialogueBox.h  SpritesheetID.h
src/States/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
